--- a/src/scss/_import.scss
+++ b/src/scss/_import.scss
@@ -10,7 +10,9 @@
 
 @import './block/header';
 @import './block/banner';
-@import './block/brand';
+@import './block/about';
+@import './block/photos';
+
 @import './block/production';
 @import './block/calc';
 @import './block/video';
