--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -9,6 +9,7 @@
     line-height: 18px;
     background: #04B7D6;
     border-radius: 8px;
+    white-space: nowrap;
     // padding-top: 3px;
     &:hover {
         background: #0392AB;
