--- a/src/scss/block/_banner.scss
+++ b/src/scss/block/_banner.scss
@@ -12,14 +12,14 @@
         position: relative;
         .border {
             display: inline-flex;
+            position: relative;
+            border: 1px solid #F7B23B;
             p {
                 font-size: 68px;
                 line-height: 110%;
                 color: #F7B23B;
                 padding: 0px 5px;
             }
-            position: relative;
-            border: 1px solid #F7B23B;
             &__block {
                 background: #FFFFFF;
                 border: 1px solid #F7B23B;
@@ -105,13 +105,21 @@
             align-items: center;
             padding: 0px 24px;
             height: 48px;
-            p {
-                font-weight: 500;
-                font-size: 20px;
-                line-height: 150%;
-                letter-spacing: -0.01em;
-                color: #171717;
-            }
+            font-weight: 500;
+            font-size: 20px;
+            line-height: 150%;
+            letter-spacing: -0.01em;
+            color: #171717;
+            border: none;
+            width: 100%;
+            box-sizing: border-box;
+            // p {
+            //     font-weight: 500;
+            //     font-size: 20px;
+            //     line-height: 150%;
+            //     letter-spacing: -0.01em;
+            //     color: #171717;
+            // }
         }
     }
     &__steps {
@@ -149,6 +157,9 @@
             display: flex;
             margin-right: 10px;
             margin-left: 4px;
+            flex-shrink: 0;
+            width: 20px;
+            height: 20px;
         }
         input {
             border: none;
@@ -157,6 +168,8 @@
             line-height: 62px;
             letter-spacing: -0.01em;
             color: #171717;
+            max-width: 120px;
+            width: 100%;
             &::placeholder {
                 font-family: 'Inter', sans-serif;
                 font-style: normal;
@@ -171,6 +184,102 @@
             padding: 3px 20px 0px 20px;
             border: none;
             margin-left: auto;
+        }
+    }
+}
+@media (max-width: 1022px) {
+    .banner {
+        &__title {
+            font-size: 56px;
+            line-height: 110%;
+            .border {
+                p {
+                    font-size: 56px;
+                    line-height: 110%;
+                }
+            }
+            .arrow {
+                right: 45px;
+                bottom: -55px;
+            }
+        }
+    }
+}
+@media (max-width: 798px) {
+    .banner {
+        padding: 48px 0px;
+        &__slider {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 20px;
+            margin: 0 auto 16px;
+        }
+        &__range {
+            max-width: 100%;
+        }
+        &__price {
+            padding-bottom: 0px;
+        }
+    }
+}
+@media (max-width: 606px) {
+    .banner {
+        &__title {
+            font-size: 36px;
+            line-height: 110%;
+            .border {
+                p {
+                    font-size: 36px;
+                    line-height: 110%;
+                }
+            }
+            .arrow {
+                right: -16px;
+                bottom: -58px;
+            }
+        }
+    }
+}
+@media (max-width: 485px) {
+    .banner {
+        &__title {
+            .arrow {
+                right: initial;
+                left: 55%;
+                &__text {
+                    font-size: 14.4515px;
+                    bottom: 20px;
+                    right: 46px;
+                }
+            }
+        }
+    }
+}
+@media (max-width: 375px) {
+    .banner {
+        &__title {
+            font-size: 30px;
+            line-height: 110%;
+            margin: 0 auto 45px;
+            .border {
+                p {
+                    font-size: 30px;
+                    line-height: 110%;
+                }
+            }
+            .arrow {
+                right: initial;
+                left: 55%;
+            }
+        }
+        &__label {
+            margin-bottom: 8px;
+        }
+        &__form {
+            button {
+                padding: 3px 8px 0 8px;
+                font-size: 12px;
+            }
         }
     }
 }
