--- a/src/scss/components/_title.scss
+++ b/src/scss/components/_title.scss
@@ -1,13 +1,19 @@
 .title {
-    font-family: 'Manrope', sans-serif;
+    font-family: 'Muller', sans-serif;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 48px;
-    line-height: 120%;
+    line-height: 110%;
     color: #0F172A;
     span {
-        color: #6567F2;
+        color: #F7B23B;
     }
+}
+.suptitle {
+    font-size: 24px;
+    line-height: 110%;
+    color: #F7B23B;
+    margin-bottom: 16px;
 }
 @media (max-width: 798px) {
     .title {
@@ -18,6 +24,9 @@
 @media (max-width: 606px) {
     .title {
         font-size: 28px;
-        line-height: 120%;
+        line-height: 110%;
+    }
+    .suptitle {
+        margin-bottom: 8px;
     }
 }
