--- a/src/scss/_import.scss
+++ b/src/scss/_import.scss
@@ -7,14 +7,16 @@
 @import './components/modal';
 @import './components/anchor';
 
-
 @import './block/header';
 @import './block/banner';
 @import './block/about';
 @import './block/photos';
-
 @import './block/production';
 @import './block/calc';
+@import './block/brand';
+@import './block/sales';
+@import './block/options';
+
 @import './block/video';
 @import './block/plan-pay';
 @import './block/how-much';
