--- a/src/scss/block/_production.scss
+++ b/src/scss/block/_production.scss
@@ -1,5 +1,6 @@
 .production {
-    padding: 36px 0px;
+    margin-top: 36px;
+    padding: 72px 0px 36px 0px;
     position: relative;
     background: #F1F5F9;
     &__title {
@@ -44,8 +45,6 @@
             font-weight: 500;
             font-size: 36px;
             line-height: 120%;
-            display: flex;
-            align-items: center;
             color: #344256;
         }
         &-arrows {
@@ -166,6 +165,109 @@
                 overflow: hidden;
                 border-radius: 8px;
                 object-fit: cover;
+            }
+        }
+    }
+}
+@media (max-width: 1022px) {
+    .production {
+        &__slider {
+            &-title {
+                max-width: 605px;
+                width: 100%;
+            }
+        }
+        &__tabs {
+            overflow-x: auto;
+            overflow-y: hidden;
+            scroll-snap-type: x mandatory;
+            scroll-behavior: smooth;
+            -webkit-overflow-scrolling: touch;
+            &::-webkit-scrollbar {
+                display: none;
+            }
+            &-link {
+                white-space: nowrap;
+            }
+        }
+    }
+}
+@media (max-width: 798px) {
+    .production {
+        &__slider {
+            &-top {
+                flex-direction: column;
+                align-items: flex-end;
+            }
+        }
+        &__slide {
+            &-user {
+                .arrow {
+                    display: none;
+                }
+            }
+            &-img {
+                height: 420px;
+                img {
+                    object-position: right;
+                }
+            }
+        }
+    }
+}
+@media (max-width: 606px) {
+    .production {
+        padding: 48px 0px 24px 0px;
+        &__slider {
+            &-title {
+                max-width: 345px;
+                font-size: 24px;
+                align-self: flex-start;
+            }
+            &-top {
+                margin-bottom: 24px;
+            }
+        }
+        &__tabs {
+            margin-bottom: 8px;
+        }
+        &__slide {
+            padding: 16px;
+            &-top {
+                margin-bottom: 16px;
+            }
+        }
+    }
+}
+@media (max-width: 550px) {
+    .production {
+        &__slide {
+            &-top {
+                flex-direction: column;
+                gap: 32px;
+                align-items: flex-start;
+            }
+        }
+    }
+}
+@media (max-width: 475px) {
+    .production {
+        &__slide {
+            &-img {
+                height: 320px;
+            }
+        }
+    }
+}
+@media (max-width: 375px) {
+    .production {
+        &__slide {
+            &-img {
+                height: 240px;
+            }
+            &-user {
+                flex-direction: column;
+                align-items: flex-start;
             }
         }
     }
