--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -1,5 +1,10 @@
 .accordion__item {
-    padding: 20px 0px;
+  margin-bottom: 15px;
+  border-radius: 12px;
+  // background-color: #F8FAFC;
+  padding: 20px;
+  background: #232324;
+  border-radius: 12px;
 }
 
 .accordion__header {
@@ -9,161 +14,58 @@
   gap: 15px;
   cursor: pointer;
   transition: background-color 0.2s ease-out;
-  p {
-    font-size: 24px;
-    line-height: 32px;
-    color: #0F172A;
-  }
-  .button-arrow {
-    display: none;
-  }
-  .button-text {
-    button {
-      height: 52px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 125px;
-      padding: 0;
-      border-radius: 4px;
-    }
-  }
+  font-size: 20px;
+  line-height: 20px;
+  color: #FFFFFF;
 }
 
-.accordion__item > .accordion__header > .button-text button:last-of-type {
-  display: none;
-}
-.accordion__item.accordion__item_slidedown {
-  .accordion__header {
-    .button-text {
-      button {
-        &:first-of-type {
-          display: none;
-        }
-        &:last-of-type {
-          display: flex;
-        }
-      }
-    }
-  }
-}
-.accordion__item.accordion__item_show {
-  .accordion__header {
-    .button-text {
-      button {
-        &:first-of-type {
-          display: none;
-        }
-        &:last-of-type {
-          display: flex;
-        }
-      }
-    }
-  }
+.accordion__header::after {
+  flex-shrink: 0;
+  width: 1.25rem;
+  height: 1.25rem;
+  margin-left: auto;
+  background-image: url('../img/arrow.svg');
+  background-repeat: no-repeat;
+  background-size: 1.25rem;
+  content: "";
+  transition: transform 0.2s ease-out;
 }
 
-  // .accordion__header::after {
-  //   flex-shrink: 0;
-  //   width: 1.25rem;
-  //   height: 1.25rem;
-  //   margin-left: auto;
-  //   background-image: url('../img/arrow.svg');
-  //   background-repeat: no-repeat;
-  //   background-size: 1.25rem;
-  //   content: "";
-  //   transition: transform 0.2s ease-out;
-  // }
-
-  // .accordion__item_show .accordion__header::after,
-  // .accordion__item_slidedown .accordion__header::after {
-  //   transform: rotate(-180deg);
-  // }
+.accordion__item_show .accordion__header::after,
+.accordion__item_slidedown .accordion__header::after {
+  transform: rotate(-180deg);
+}
 
 //   .accordion__header:hover {
 //     background-color: #0b5ed7;
 //   }
 
-  .accordion__item:not(.accordion__item_show) .accordion__header {
-    // border-bottom-right-radius: 0.25rem;
-    // border-bottom-left-radius: 0.25rem;
-    // border-radius: 12px;
-  }
-
-  .accordion__content {
-    padding-top: 20px;
-    font-size: 20px;
-    line-height: 130%;
-    color: #334155;
-  }
-
-  .accordion__item:not(.accordion__item_show) .accordion__body {
-    display: none;
-  }
-
-  @media (max-width: 798px) {
-    .accordion__header {
-      align-items: flex-start;
-      .button-text {
-        display: none;
-      }
-      .button-arrow {
-        display: block;
-        button {
-          width: 52px;
-          height: 52px;
-          border-radius: 4px;
-          padding: 0;
-          svg {
-            transition: .3s all;
-          }
-        }
-      }
-    }
-    .accordion__item.accordion__item_slidedown {
-      .accordion__header {
-        .button-arrow {
-          button {
-            svg {
-              transform: rotate(180deg);
-            }
-          }
-        }
-      }
-    }
-    .accordion__item.accordion__item_show {
-      .accordion__header {
-        .button-arrow {
-          button {
-            svg {
-              transform: rotate(180deg);
-            }
-          }
-        }
-      }
-    }
-  }
-@media (max-width: 606px) {
-  .accordion__item {
-    padding: 12px 0px;
-  }
-  .accordion__header {
-    p {
-      font-size: 20px;
-      line-height: 32px;
-    }
-  }
-  .accordion__content {
-    padding-top: 20px;
-    font-size: 18px;
-    line-height: 130%;
-    color: #334155;
-  }
+.accordion__item:not(.accordion__item_show) .accordion__header {
+  // border-bottom-right-radius: 0.25rem;
+  // border-bottom-left-radius: 0.25rem;
+  border-radius: 12px;
 }
-@media (max-width: 375px) {
-  .accordion__content {
-    padding-top: 20px;
+
+.accordion__content {
+  padding-top: 20px;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: -0.02em;
+  color: #CBD5E1;
+}
+
+.accordion__item:not(.accordion__item_show) .accordion__body {
+  display: none;
+}
+.accordion__item.hidden {
+  display: none;
+}
+
+@media (max-width: 606px) {
+  .accordion__header {
     font-size: 16px;
-    line-height: 130%;
-    color: #334155;
   }
 }
