--- a/src/scss/block/_contacts.scss
+++ b/src/scss/block/_contacts.scss
@@ -5,11 +5,11 @@
         display: flex;
         justify-content: space-between;
         &-left {
-            max-width: 440px;
+            max-width: max-content;
             width: 100%;
         }
         &-right {
-            max-width: 440px;
+            max-width: 500px;
             width: 100%;
         }
     }
@@ -25,14 +25,14 @@
             line-height: 140%;
             color: #334155;
             a {
-                color: #6567F2;
+                color: #15B8A5;
                 text-decoration: none;
                 &:hover {
                     text-decoration: none;
                 }
                 &:active {
                     text-decoration: none;
-                    color: #6567F2;
+                    color: #15B8A5;
                 }
             }
         }
@@ -40,22 +40,21 @@
     &__buttons {
         display: flex;
         align-items: center;
-        gap: 16px;
-        margin-bottom: 16px;
+        gap: 10px;
         &-link {
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 10px;
-            padding: 0px 25px;
-            height: 40px;
-            box-sizing: border-box;
+            width: 116px;
+            height: 116px;
+            border-radius: 100%;
         }
     }
     &__pay {
         display: flex;
         align-items: center;
         gap: 16px;
+        margin-bottom: 40px;
         p {
             font-size: 20px;
             line-height: 140%;
@@ -73,19 +72,15 @@
         }
     }
     &__form {
+        background: #1A1A1A;
+        border-radius: 12px;
         display: flex;
         flex-direction: column;
-        gap: 16px;
-        border: 1px solid #E1E7EF;
-        border-radius: 8px;
-        padding: 24px;
-        &-title {
-            font-size: 32px;
-            line-height: 120%;
-            color: #48566A;
-            text-align: center;
-        }
-        input, textarea {
+        // gap: 16px;
+        // border: 1px solid #E1E7EF;
+        // border-radius: 8px;
+        padding: 36px;
+        input {
             background: #F8FAFC;
             border: 1px solid #E1E7EF;
             border-radius: 4px;
@@ -97,21 +92,106 @@
             font-size: 16px;
             line-height: 46px;
             color: #334155;
+            margin-bottom: 16px;
             &::placeholder {
                 color: #94A3B8;
             }
         }
-        textarea {
-            padding-top: 10px;
+        &-input {
+            display: flex;
+            align-items: center;
+            padding: 0px 12px;
+            height: 48px;
+            box-sizing: border-box;
+            background: #F1F5F9;
+            border: 1px solid #E1E7EF;
+            border-radius: 4px;
+            gap: 3px;
+            margin-bottom: 16px;
+            p {
+                font-size: 20px;
+                line-height: 46px;
+                color: #0F172A;
+                font-family: 'Manrope', sans-serif;
+                font-style: normal;
+                font-weight: 400;
+            }
+            input {
+                font-size: 20px;
+                line-height: 46px;
+                color: #0F172A;
+                background: transparent;
+                border: none;
+                height: 100%;
+                width: 100%;
+                padding: 0px 0px 0px 0px;
+                font-family: 'Manrope', sans-serif;
+                font-style: normal;
+                font-weight: 400;
+                margin-bottom: 0px;
+                padding-bottom: 1px;
+                &::placeholder {
+                    color: #CBD5E1;
+                }
+            }
+        }
+        &-title {
+            font-size: 32px;
+            line-height: 120%;
+            color: #fff;
+            text-align: left;
+            margin-bottom: 40px;
+        }
+        &-subtitle {
+            font-family: 'Inter', sans-serif;
+            font-style: normal;
+            font-weight: 400;
             font-size: 16px;
-            line-height: 20px;
-            color: #334155;
-            height: 100px;
-            max-width: 390px !important;
-            width: 100% !important;
-            resize: none;
-            &::placeholder {
+            line-height: 24px;
+            letter-spacing: -0.02em;
+            color: #CBD5E1;
+            margin-bottom: 24px;
+        }
+       
+        #police {
+            display: none;
+        }
+        label {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin-bottom: 16px;
+            div {
+                margin-top: 2px;
+                width: 20px;
+                height: 20px;
+                border: 1px solid #CBD5E1;
+                border-radius: 3px;
+                display: flex;
+                flex-shrink: 0;
+                box-sizing: border-box;
+                img {
+                    display: none;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
+            }
+            p {
+                font-family: 'Manrope', sans-serif;
+                font-style: normal;
+                font-weight: 400;
+                font-size: 16px;
+                line-height: 24px;
                 color: #94A3B8;
+            }
+        }
+        #police:checked + label {
+            div {
+                background: #CBD5E1;
+                img {
+                    display: flex;
+                }
             }
         }
         button {
@@ -121,7 +201,7 @@
             padding: 0;
             height: 48px;
             border: none;
-            border-radius: 4px;
+            border-radius: 8px;
             width: 100%;
         }
     }
@@ -130,7 +210,7 @@
     .contacts {
         &__wrapper {
             flex-direction: column;
-            gap: 80px;
+            gap: 20px;
             &-right {
                 max-width: 100%;
             }
@@ -153,18 +233,36 @@
         }
     }
 }
+@media (max-width: 543px) {
+    .contacts {
+        &__form {
+            label {
+                align-items: flex-start;
+                div {
+                    margin-top: 5px;
+                }
+            }
+        }
+    }
+}
 @media (max-width: 475px) {
     .contacts {
         &__list {
             &-text {
                 font-size: 16px;
             }
-        } 
+        }
+        &__pay {
+            p {
+                font-size: 16px;
+            }
+        }
     }
 }
 @media (max-width: 375px) {
     .contacts {
         &__form {
+            padding: 25px 20px;
             &-title {
                 font-size: 28px;
             }
@@ -180,9 +278,15 @@
                 font-size: 14px;
             }
         }
-        &__buttons {
-            flex-direction: column;
-            &-item {
+        // &__buttons {
+        //     flex-direction: column;
+        //     &-item {
+        //         width: 100%;
+        //     }
+        // }
+        &__pay {
+            flex-wrap: wrap;
+            p {
                 width: 100%;
             }
         }
