--- a/src/scss/block/_map.scss
+++ b/src/scss/block/_map.scss
@@ -1,9 +1,9 @@
 .map {
-    padding: 36px 0px;
+    padding: 36px 0px 0px 0px;
     height: 420px;
 }
 @media (max-width: 606px) {
     .map {
-        padding: 24px 0px;
+        padding: 24px 0px 0px 0px;
     }
 }
