--- a/src/scss/block/_options.scss
+++ b/src/scss/block/_options.scss
@@ -1,6 +1,7 @@
 .options {
     padding: 36px 0px;
     background: #f1f5f9;
+    position: relative;
     &__title {
         width: max-content;
         margin: 0 auto 72px;
