--- a/src/scss/block/_banner.scss
+++ b/src/scss/block/_banner.scss
@@ -158,6 +158,7 @@
         margin: 0 auto;
         padding: 8px;
         box-sizing: border-box;
+        border: 1px solid transparent;
         svg {
             display: flex;
             margin-right: 10px;
@@ -173,7 +174,7 @@
             line-height: 62px;
             letter-spacing: -0.01em;
             color: #171717;
-            max-width: 120px;
+            // max-width: 120px;
             width: 100%;
             &::placeholder {
                 font-family: 'Inter', sans-serif;
