--- a/src/scss/block/_calc.scss
+++ b/src/scss/block/_calc.scss
@@ -1,6 +1,7 @@
 .calc {
     padding: 36px 0px;
     background: #F1F5F9;
+    position: relative;
     &__wrapper {
         background: #FFFFFF;
         border-radius: 12px;
@@ -81,6 +82,7 @@
         display: flex;
         flex-direction: column;
         &-input {
+            border: 1px solid transparent;
             display: flex;
             align-items: center;
             gap: 10px;
