--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -9,16 +9,16 @@
     justify-content: center;
     background: rgba(0, 0, 0, .3);
     padding: 15px 15px;
-    z-index: 10;
+    z-index: 100;
     &_thx {
         padding: 0;
     }
     .modal {
-        padding: 25px;
+        padding: 35px;
         background: #FFFFFF;
         border: 1px solid #E1E7EF;
         border-radius: 8px;
-        max-width: 465px;
+        max-width: 501px;
         width: 100%;
         box-sizing: border-box;
         position: relative;
@@ -32,19 +32,23 @@
             flex-shrink: 0;
         }
         &__title {
+            font-family: 'Muller', sans-serif;
+            font-style: normal;
+            font-weight: 400;
             font-size: 32px;
-            line-height: 120%;
-            color: #0F172A;
-            margin-bottom: 25px;
-            text-align: center;
+            line-height: 110%;
+            color: #4B515F;
+            margin-bottom: 40px;
         }
         &__subtitle {
-            font-weight: 500;
-            font-size: 24px;
-            line-height: 32px;
-            text-align: center;
+            font-family: 'Inter', sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24px;
+            letter-spacing: -0.02em;
             color: #65758B;
-            margin-bottom: 16px;
+            margin-bottom: 24px;
         }
         &__form {
             display: flex;
@@ -66,6 +70,7 @@
                     color: #94A3B8;
                 }
             }
+
             textarea {
                 font-family: 'Manrope', sans-serif;
                 font-style: normal;
@@ -79,6 +84,47 @@
                 width: 100% !important;
                 &::placeholder {
                     color: #94A3B8;
+                }
+            }
+            .police-modal {
+                display: none;
+            }
+            label {
+                display: flex;
+                align-items: center;
+                gap: 8px;
+                margin-bottom: 16px;
+                div {
+                    margin-top: 2px;
+                    width: 20px;
+                    height: 20px;
+                    border: 1px solid #CBD5E1;
+                    border-radius: 3px;
+                    display: flex;
+                    flex-shrink: 0;
+                    box-sizing: border-box;
+                    img {
+                        display: none;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                    }
+                }
+                p {
+                    font-family: 'Manrope', sans-serif;
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 24px;
+                    color: #94A3B8;
+                }
+            }
+            .police-modal:checked + label {
+                div {
+                    background: #CBD5E1;
+                    img {
+                        display: flex;
+                    }
                 }
             }
             button {
@@ -98,7 +144,7 @@
         background: #FFFFFF;
         border: 1px solid #E1E7EF;
         border-radius: 8px;
-        max-width: 290px;
+        max-width: 384px;
         width: 100%;
         &__title {
             font-size: 32px;
@@ -108,8 +154,7 @@
             text-align: center;
         }
         &__subtitle {
-            font-weight: 500;
-            font-size: 24px;
+            font-size: 20px;
             line-height: 32px;
             text-align: center;
             color: #65758B;
@@ -246,7 +291,8 @@
         margin-top: 12px;
     }
 }
-@media (max-width: 475px) {
+
+@media (max-width: 606px) {
     .hidden-menu.active {
         display: block;
     }
@@ -254,22 +300,12 @@
         right: 0;
     }
     .overlay {
+        padding: 0;
         .modal {
-            padding: 15px;
-            &__title {
-                font-size: 24px;
-                line-height: 140%;
-                margin-bottom: 15px;
-            }
-            &__subtitle {
-                font-size: 20px;
-                line-height: 22px;
-            }
+            max-width: 100%;
+            border-radius: 24px 24px 0px 0px;
         }
-    }
-}
-@media (max-width: 375px) {
-    .overlay {
+        align-items: flex-end;
         &_thx {
             align-items: flex-end;
         }
@@ -279,3 +315,43 @@
         }
     }
 }
+
+@media (max-width: 475px) {
+   
+    .overlay {
+        .modal {
+            padding: 15px;
+            &__title {
+                font-size: 22px;
+                line-height: 140%;
+                margin-bottom: 15px;
+                text-align: center;
+            }
+            &__subtitle {
+                font-size: 16px;
+                line-height: 24px;
+                text-align: center;
+            }
+        }
+        .thx {
+            &__title {
+                font-size: 28px;
+            }
+            &__subtitle {
+                font-size: 20px;
+                line-height: 32px;
+            }
+        }
+    }
+}
+// @media (max-width: 375px) {
+//     .overlay {
+//         &_thx {
+//             align-items: flex-end;
+//         }
+//         .thx {
+//             max-width: 100%;
+//             border-radius: 24px 24px 0px 0px;
+//         }
+//     }
+// }
